# arkanoid

./: CMakeLists.txt  arkanoid
src/: ball.cpp  ball.h  brick.cpp  brick.h  game.cpp  game.h  main.cpp  platform.cpp  platform.h  rectangle.cpp  rectangle.h  utils.h
